--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ pool:
 
 variables:
   webAppName: 'loadtestingwebapp03'
-  serviceConnection: 'LoadTestingConnection'
+  serviceConnection: 'LoadTestConnection'
   azureSubscriptionId: 'f6ed362e-df41-4175-ac5f-dda07adeb11b'
   loadTestResource: 'skt-poc-load-testing-01'
   loadTestResourceGroup: 'skt-poc-rg-05'
